// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Support /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn hixPQQ outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly when loading 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn hixPQQ outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-gsnTZi cTWewb sc-crXcEl jisdVx"
        id="add-link"
      >
        ADD LINK
      </h1>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin and createLinkError 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-gsnTZi cTWewb sc-crXcEl jisdVx"
        id="add-link"
      >
        ADD LINK
      </h1>
      <span
        class="sc-ivTmOn kdttXe"
      >
        <span
          class="sc-cxabCf jLTMMo"
        >
          Failed to add link
          <br />
          Error creating link
        </span>
      </span>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin and deleteLinkError 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-gsnTZi cTWewb sc-crXcEl jisdVx"
        id="add-link"
      >
        ADD LINK
      </h1>
      <span
        class="sc-ivTmOn kdttXe"
      >
        <span
          class="sc-cxabCf jLTMMo"
        >
          Failed to delete link
          <br />
          Error deleting link
        </span>
      </span>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with links 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="name-1"
      >
        name 1
      </h1>
      <span
        class="sc-ivTmOn kdttXe support-linkstyles__StyledParagraph-sc-1088mlq-0 huyeQP"
      >
        <a
          aria-label="URL_1 (opens in a new tab)"
          class="sc-iBkjds JLudk"
          href="URL_1"
          rel="noopener noreferrer"
          target="_blank"
        >
          URL_1
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
        description 1
      </span>
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="name-2"
      >
        name 2
      </h1>
      <span
        class="sc-ivTmOn kdttXe support-linkstyles__StyledParagraph-sc-1088mlq-0 huyeQP"
      >
        <a
          aria-label="URL_2 (opens in a new tab)"
          class="sc-iBkjds JLudk"
          href="URL_2"
          rel="noopener noreferrer"
          target="_blank"
        >
          URL_2
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
        description 2
      </span>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with loadError 1`] = `
<div>
  <div
    class="sc-llJcti gVCISo page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idiyUo gZOHEF"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-ksZaOG UTWGT"
      >
        Support
      </h1>
    </div>
    <div
      class="supportstyles__Controls-sc-yym0gw-0 jknFIr"
    >
      <button
        class="sc-dmRaPn dquIzU outer"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Reload
        </span>
      </button>
    </div>
    <span
      class="sc-ivTmOn kdttXe"
    >
      <span
        class="sc-cxabCf jLTMMo"
      >
        The support session failed to load
        <br />
        some error message
      </span>
    </span>
    <div
      class="sc-evZas cgLOYZ support__body-skeleton"
    >
      <div
        class="sc-breuTD bLqFbu"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;
